Fixed position of checkbox

--- a/registrationForm.html
+++ b/registrationForm.html
@@ -156,16 +156,14 @@
                   </div>
                 </div>
               </div>
-              <div id="difAddressCheck" class="justify-content-between">
-                <div class="form-check form-switch">
+              <div id="difAddressCheck" class="justify-content-center d-flex">
+                <div>Coop Address different from Home Address?</div>
+                <div class="form-check form-switch ms-3">
                   <input
                     class="form-check-input"
                     type="checkbox"
                     id="diffAddressCheck"
                   />
-                  <label class="form-check-label" for="flexSwitchCheckDefault"
-                    >Coop Address different from Home Address?</label
-                  >
                 </div>
               </div>
               <div id="coopInfo" style="display: none">
