--- a/registrationForm.html
+++ b/registrationForm.html
@@ -15,7 +15,7 @@
         color: #000;
         overflow-x: hidden;
         height: 100%;
-        background-color: whitesmoke;
+        background-color: rgb(196, 196, 196);
         background-repeat: no-repeat;
         background-size: 100% 100%;
       }
@@ -68,7 +68,7 @@
                       type="text"
                       id="inputFirstName"
                       name="firstName"
-                      placeholder="Enter your first name"
+                      placeholder="First Name"
                     />
                   </div>
                   <div class="form-group col-sm-6 flex-column d-flex">
@@ -77,7 +77,7 @@
                       type="text"
                       id="inputLastName"
                       name="lastName"
-                      placeholder="Enter your last name"
+                      placeholder="Last Name"
                     />
                   </div>
                 </div>
@@ -88,7 +88,7 @@
                       type="email"
                       id="inputEmail"
                       name="email"
-                      placeholder="Enter your email address"
+                      placeholder="email@example.com"
                     />
                   </div>
                   <div class="form-group col-sm-6 flex-column d-flex">
@@ -102,7 +102,7 @@
                 </div>
               </div>
               <div id="addressInfo">
-                <h5 class="text-center mb-4 mt-4">Address</h5>
+                <h5 class="text-center mb-4 mt-4">User Address</h5>
                 <div class="row justify-content-between text-left">
                   <div class="form-group col-sm-6 flex-column d-flex">
                     <label class="form-control-label px-3"
@@ -112,7 +112,7 @@
                       type="text"
                       id="inputAdress1"
                       name="address-1"
-                      placeholder="Street address, P.O. box, company name, c/o"
+                      placeholder="Street address, P.O. Box, Company Name, etc"
                     />
                   </div>
                   <div class="form-group col-sm-6 flex-column d-flex">
@@ -123,7 +123,7 @@
                       type="text"
                       id="inputAdress2"
                       name="address-2"
-                      placeholder="Apartment, suite , unit, building, floor, etc"
+                      placeholder="Apartment, Suite , Unit, etc"
                     />
                   </div>
 
@@ -133,7 +133,7 @@
                       type="text"
                       id="inputCity"
                       name="city"
-                      placeholder="Enter your city"
+                      placeholder="City"
                     />
                   </div>
                   <div class="form-group col-sm-3 flex-column d-flex">
@@ -142,16 +142,16 @@
                       type="text"
                       id="inputState"
                       name="state"
-                      placeholder="Enter your state"
+                      placeholder="State"
                     />
                   </div>
                   <div class="form-group col-sm-3 flex-column d-flex">
-                    <label class="form-control-label px-3">Zipcode</label>
+                    <label class="form-control-label px-3">Zip Code</label>
                     <input
                       type="number"
                       id="inputZipcode"
                       name="zipcode"
-                      placeholder="Enter your zipcode"
+                      placeholder="Zip Code"
                     />
                   </div>
                 </div>
@@ -223,7 +223,7 @@
               </div>
               <div class="row justify-content-center">
                 <div class="form-group col-sm-6 mt-3">
-                  <button type="button" class="btn btn-primary">
+                  <button type="button" class="btn btn-primary" id="btnCreateAccount">
                     Create Account
                   </button>
                 </div>
@@ -243,11 +243,98 @@
       integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
       crossorigin="anonymous"
     ></script>
+    <script src="js/lib/sweetalert2.js"></script>
     <script>
       $("#diffAddressCheck").on("change", function () {
         console.log($(this).is(":checked"));
         $("#coopInfo").slideToggle();
       });
+
+      $('#btnCreateAccount').on('click', function(){
+        
+        let blnError = false;
+        let strErrorMessage = '';
+
+        if($('#inputFirstName').val() == ''){
+          strErrorMessage += ('<p>Please enter your first name</p>');
+          blnError = true;
+        }
+        if($('#inputLastName').val() == ''){
+          strErrorMessage += ('<p>Please enter your last name</p>');
+          blnError = true;
+        }
+        if(!/^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/.test($('#inputEmail').val())){
+          strErrorMessage += ('<p>Please enter a valid email</p>');
+          blnError = true;
+        }
+        if($('#inputPassword').val() == ''){
+          strErrorMessage += ('<p>Please enter your password</p>');
+          blnError = true;
+        }
+        // if($('#inputPassword').val().length() < 8){
+        //   strErrorMessage += ('<p>Password must be at least 8 characters</p>');
+        //   blnError = true;
+        // }
+        // if(!/[A-Z]/.test($('#inputPassword').val())){
+        //   strErrorMessage += ('<p>Password must contain at least one uppercase letter</p>');
+        //   blnError = true;
+        // }
+        // if(!/[!@#$%&+-=?]/.test($('#inputPassword').val())){
+        //   strErrorMessage += ('<p>Password must contain at least one special character</p>');
+        //   blnError = true;
+        // }
+        if($('#inputAddress1').val() == ''){
+          strErrorMessage += ('<p>Please enter your address</p>');
+          blnError = true;
+        }
+        if($('#inputCity').val() == ''){
+          strErrorMessage += ('<p>Please enter your city</p>');
+          blnError = true;
+        }
+        if($('#inputState').val() == ''){
+          strErrorMessage += ('<p>Please enter your state</p>');
+          blnError = true;
+        }
+        if($('#inputZipcode').val() == ''){
+          strErrorMessage += ('<p>Please enter your zipcode</p>');
+          blnError = true;
+        }
+        if($('#diffAddressCheck').is(':checked')){
+          if($('#inputCoopAdress1').val() == ''){
+            strErrorMessage += ('<p>Please enter your coop address</p>');
+            blnError = true;
+          }
+          if($('#inputCoopCity').val() == ''){
+            strErrorMessage += ('<p>Please enter your coop city</p>');
+            blnError = true;
+          }
+          if($('#inputCoopState').val() == ''){
+            strErrorMessage += ('<p>Please enter your coop state</p>');
+            blnError = true;
+          }
+          if($('#inputCoopZipcode').val() == ''){
+            strErrorMessage += ('<p>Please enter your coop zipcode</p>');
+            blnError = true;
+          }
+        }
+
+        if(blnError == true) {
+          Swal.fire({
+            title: 'Error!',
+            icon: 'error',
+            html: strErrorMessage
+          })
+        } else {
+          Swal.fire({
+            title: 'Success!',
+            icon: 'success',
+            html: 'Account created successfully'
+          })
+        }
+        
+
+
+      })
     </script>
   </body>
 </html>
