--- a/registrationForm.html
+++ b/registrationForm.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
+    <link href="css/lib/bootstrap.min.css" rel="stylesheet">
     <style>
       body {
         color: #000;
@@ -56,8 +51,7 @@
               margin-bottom: 60px;
               border: none;
               box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.2);
-            "
-          >
+            ">
             <h5 class="text-center mb-4">User Info</h5>
             <form class="form-card">
               <div id="genInfo">
@@ -233,16 +227,8 @@
         </div>
       </div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://code.jquery.com/jquery-3.6.1.min.js"
-      integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
-      crossorigin="anonymous"
-    ></script>
+    <script src="js/lib/bootstrap.bundle.min.js"></script>"
+    <script src="js/lib/jquery-3.6.1.min.js"></script>
     <script src="js/lib/sweetalert2.js"></script>
     <script>
       $("#diffAddressCheck").on("change", function () {
