--- a/registrationForm.html
+++ b/registrationForm.html
@@ -6,14 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="css/lib/bootstrap.min.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E">
+  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
   <style>
     body {
       color: #000;
       overflow-x: hidden;
-      height: 100%;
-      background-color: #ccd5ae;
+      height: 100vh;
+      background: rgb(96, 108, 56);
+      background: radial-gradient(circle, rgb(153, 152, 91) 0%, rgba(40, 54, 24, 1) 100%);
       background-repeat: no-repeat;
       background-size: 100% 100%;
+      font-family: 'DM Serif Display', serif;
     }
 
     .form-control-label {
@@ -39,6 +44,19 @@
       outline-width: 0;
       font-weight: 400;
     }
+
+    .card {
+      padding: 30px 40px;
+      margin-top: 60px;
+      margin-bottom: 60px;
+      border: none;
+      box-shadow: 0 18px 22px 0 rgba(0, 0, 0, 0.2);
+      background: rgba(241, 237, 178, 0.6);
+      border-radius: 16px;
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(6.4px);
+      -webkit-backdrop-filter: blur(6.4px);
+    }
   </style>
   <title>Final Project</title>
 </head>
@@ -47,15 +65,9 @@
   <div class="container-fluid px-1 py-5 mx-auto">
     <div class="row d-flex justify-content-center">
       <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
-        <div class="card" style="
-              padding: 30px 40px;
-              margin-top: 60px;
-              margin-bottom: 60px;
-              border: none;
-              box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.2);
-            ">
+        <div class="card rounded-5">
           <div class="card-header container-fluid">
-           <h2>Registration Form</h2>
+            <h1 style="letter-spacing: 4px;"><b>REGISTER</b></h1>
           </div>
           <h5 class="text-center mb-4">User Info</h5>
           <form class="form-card">
@@ -144,7 +156,7 @@
             <div class="row justify-content-center">
               <div class="form-group col-sm-6 mt-3">
                 <button type="button" class="btn" id="btnCreateAccount"
-                  style="background-color: #d4a373; color: white;">
+                  style="background-color: #bc6c25; color: white;">
                   Create Account
                 </button>
               </div>
