--- a/registrationForm.html
+++ b/registrationForm.html
@@ -14,8 +14,7 @@
       color: #000;
       overflow-x: hidden;
       height: 100vh;
-      background: rgb(96, 108, 56);
-      background: radial-gradient(circle, rgb(153, 152, 91) 0%, rgba(40, 54, 24, 1) 100%);
+      background-image: url("images/background.jpg");
       background-repeat: no-repeat;
       background-size: 100% 100%;
       font-family: 'DM Serif Display', serif;
@@ -51,7 +50,7 @@
       margin-bottom: 60px;
       border: none;
       box-shadow: 0 18px 22px 0 rgba(0, 0, 0, 0.2);
-      background: rgba(241, 237, 178, 0.6);
+      background: rgba(255, 255, 255, 0.4);
       border-radius: 16px;
       box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
       backdrop-filter: blur(6.4px);
