--- a/registrationForm.html
+++ b/registrationForm.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <style>
+      /* Background*/
       html {
         background: url(images/background.jpg) no-repeat center center fixed;
         -webkit-background-size: cover;
@@ -20,6 +21,7 @@
         background-size: cover;
         text-align: center;
       }
+
       body {
         background: transparent;
         color: #000;
@@ -63,6 +65,7 @@
         backdrop-filter: blur(6.4px);
         -webkit-backdrop-filter: blur(6.4px);
       }
+      /* Bar Animation */
       .bar {
         position: relative;
         display: block;
@@ -87,14 +90,9 @@
         right: 50%;
       }
 
-      /* active state */
       input:focus ~ .bar:before,
       input:focus ~ .bar:after {
         width: 50%;
-      }
-      .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-danger {
-        color: #fff;
-        background: #d9c84f;
       }
     </style>
     <title>Final Project</title>
