--- a/registrationForm.html
+++ b/registrationForm.html
@@ -122,12 +122,13 @@
           </div>
           <div class="row justify-content-center">
             <div class="form-group col-sm-6 mt-4">
-              <button type="button" class="btn" id="btnLogin" style="background-color: #bc6c25; color: white; width: 30%;">Login</button>
+              <button type="button" class="btn" id="btnLogin" style="background-color: #bc6c25; color: white; width: 50%;">Login</button>
               <div>
-                Don't already have an account?
-                <button type="button" class="btn" id="btnCreateAccountLinker" style="background-color: transparent; color: #bc6c25">Create One</button>
+                <button type="button" class="btn" id="btnForgotPassword" style="background-color: transparent; color: #bc6c25">Forgot Password?</button>
               </div>
             </div>
+            <hr>
+            <button type="button" class="btn" id="btnCreateAccountLinker" style="background-color: #5a3719; color: white; width: 20%;">Create Account</button>
           </div>
         </div>
       </div>
