Why does this work?

--- a/registrationForm.html
+++ b/registrationForm.html
@@ -184,25 +184,51 @@
             <div class="row d-flex justify-content-center" style="padding-left: 5%;">
               <div class="col-3">
                 <div class="card col-10">
-                  <span>Total Eggs Harvested:</span>
+                  <span>Coop Door</span>
                   <h2>3894</h2>
                 </div>
               </div>
               <div class="col-3">
                 <div class="card col-10">
-                  <span>Current Temperature</span>
+                  <span>Coop Light</span>
                   <h2>56°</h2>
                 </div>
               </div>
               <div class="col-3">
                 <div class="card col-10">
-                  <span>Current Humidity</span>
+                  <span>Temperature</span>
                   <h2>46%</h2>
                 </div>
               </div>
               <div class="col-3">
                 <div class="card col-10">
-                  <span>Days Until Next Cleanout</span>
+                  <span>Alarms</span>
+                  <h2 id="cleanoutDay"></h2>
+                </div>
+              </div>
+            </div>
+            <div class="row d-flex justify-content-center" style="padding-left: 5%;">
+              <div class="col-3">
+                <div class="card col-10">
+                  <span>Coop Door</span>
+                  <h2>3894</h2>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="card col-10">
+                  <span>Coop Light</span>
+                  <h2>56°</h2>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="card col-10">
+                  <span>Temperature</span>
+                  <h2>46%</h2>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="card col-10">
+                  <span>Alarms</span>
                   <h2 id="cleanoutDay"></h2>
                 </div>
               </div>
